--- a/sass/_offer-section.scss
+++ b/sass/_offer-section.scss
@@ -80,10 +80,6 @@
 .btn {
     &--offer {
         margin-top: 60px;
-
-        @media only screen and (max-width: 600px) {
-            margin-top: 20px;
-        }
     }
 }
 
